--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.10.3",
+    "framer-motion": "^3.2.1",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
+    "use-dark-mode": "^2.3.1"
+  },
+  "devDependencies": {
+    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "react-is": "^17.0.1",
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.0.8"
   }
 }
