--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.10.3",
     "framer-motion": "^3.2.1",
     "next": "10.0.5",
+    "next-seo": "^4.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1",
